--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -100,6 +100,8 @@ nav .nav-wrapper ul {
   color: #fff;
   background: #242424;
   border-color: #282828;
+  display: flex;
+  align-items: center;
 }
 
 .btn {
@@ -108,4 +110,18 @@ nav .nav-wrapper ul {
 
 .btn:hover, .btn-large:hover {
     background-color: rgba(46,189,89,0.8);
+}
+
+/** audio **/
+audio {
+  margin-right: 10px;
+  width: 100px;
+}
+
+audio::-webkit-media-controls-panel {
+    background: transparent;
+}
+
+.collection-item div {
+    width: calc(100% - 110px);
 }
